<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/predmeti_item"
        android:enabled="true"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/predmeti"/>
    <item
        android:id="@+id/ispiti_item"
        android:enabled="true"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/ispiti"/>

    <item
        android:id="@+id/izostanci_item"
        android:enabled="true"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/izostanci"
        />

    <item
        android:id="@+id/biljeske_item"
        android:enabled="true"
        android:icon="@drawable/baseline_notes_24"
        android:title="@string/biljeske"
        />

    <item
        android:id="@+id/ponasanje_item"
        android:enabled="true"
        android:icon="@drawable/baseline_emoji_people_24"
        android:title="@string/ponasanje"
        />
</menu>